@@ -36,21 +36,23 @@ SignalPropertyPage.2=Suspend the program when this signal happens.
 SignalPropertyPage.3=Error
 SignalPropertyPage.4=Operation failed.
 SignalPropertyPage.5=Unable to change signal properties.
-ModulePropertyPage.0=Type
+ModulePropertyPage.0=Type:
 ModulePropertyPage.1=executable
 ModulePropertyPage.2=shared library
 ModulePropertyPage.3=core file
-ModulePropertyPage.4=CPU
+ModulePropertyPage.3=Browse...
+ModulePropertyPage.4=CPU:
 ModulePropertyPage.5=not available
-ModulePropertyPage.6=Base address
+ModulePropertyPage.6=Base address:
 ModulePropertyPage.7=not available
-ModulePropertyPage.8=Size
+ModulePropertyPage.8=Size:
 ModulePropertyPage.9=not available
-ModulePropertyPage.10=Symbols
+ModulePropertyPage.10=Symbols:
 ModulePropertyPage.11=loaded
 ModulePropertyPage.12=not loaded
-ModulePropertyPage.13=Symbols file
+ModulePropertyPage.13=Symbols file:
 ModulePropertyPage.14=not found
 ModulePropertyPage.15=Error
 ModulePropertyPage.15=Unable to load symbols.
 ModulePropertyPage.16=Unable to load symbols.
+ModulePropertyPage.16=not available
